Fixed a whitespace issue inside the textarea element in Restricted Textarea project

--- a/Restricted Textarea/style.css
+++ b/Restricted Textarea/style.css
@@ -15,7 +15,7 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 300px;
+    width: 400px;
 }
 
 h2 {
@@ -23,7 +23,7 @@ h2 {
 }
 
 textarea {
-    width: 100%;
+    width: 90%;
     height: 100px;
     padding: 10px;
     font-size: 16px;
